--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,12 @@ body {
   background-color: #f1f3ff;
 }
 
+.btn-utama {
+  background-color: #5cb85f;
+  color: #ffff;
+  border-radius: 0;
+}
+
 .nav-link {
   color: black;
   font-size: 14px;
@@ -104,6 +110,128 @@ body {
   font-weight: 300;
 }
 
+.search {
+  margin-top: -50px;
+}
+
+.search .search__card {
+  background: #ffffff;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+}
+
+.search .search__card .search__time .form-select {
+  background-image: url("../images/fi_clock.png");
+  background-size: 20px auto;
+}
+
+.search .search__card .form-select:hover {
+  border: 1px solid #5cb85f;
+  border-radius: 2px;
+}
+
+.search .search__card .form-select option:hover,
+.search .search__card .form-select option:checked {
+  background: #c9e7ca;
+  color: #5cb85f;
+}
+
+.cars {
+  margin-top: 30px;
+}
+
+.cars .card {
+  width: 340px;
+  -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+}
+
+.cars .card .card-img-top {
+  width: 320px;
+  height: 180px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.cars .card .cars__p {
+  font-size: 14px;
+  line-height: 20px;
+  height: 100px;
+}
+
+@media (max-width: 1199px) {
+  .sewa {
+    margin-top: 100px;
+  }
+  .sewa .container {
+    background-color: #0d28a6;
+    border-radius: 10px;
+  }
+  .sewa .container p {
+    line-height: 20px;
+    padding: 0 200px;
+    font-size: 14px;
+  }
+  .cars .card {
+    width: 280px;
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+  }
+  .cars .card .card-img-top {
+    width: 260px;
+  }
+}
+
+@media (max-width: 992px) {
+  .owl-carousel .owl-stage-outer .owl-item img {
+    width: 80px !important;
+  }
+  .owl-carousel .owl-stage-outer .owl-item .card {
+    max-width: 350px;
+  }
+  .owl-carousel .owl-stage-outer .owl-item .card .card-body img {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .sewa .container h1 {
+    padding: 0 70px;
+  }
+  .sewa .container p {
+    padding: 0 80px;
+    font-size: 15px;
+  }
+  .faq .title-faq {
+    text-align: center;
+  }
+  .faq .title-faq h2 {
+    font-weight: bold;
+    font-size: 30px;
+  }
+  .faq .title-faq p {
+    margin: 30px 0;
+  }
+  .cars {
+    margin-top: 30px;
+  }
+  .cars .card {
+    width: 500px;
+    margin-top: 20px;
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+  }
+  .cars .card .card-img-top {
+    width: 480px;
+    height: 250px;
+  }
+  .cars .card .cars__p {
+    font-size: 14px;
+    line-height: 20px;
+    height: 50px;
+  }
+}
 .footer {
   background-color: #f8f9fa;
   border-top: 1px solid #dee2e6;
